# zit

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/common/: GenericSingleton.hpp  LoggerMacros.hpp
include/utils/: Logger.hpp
src/utils/: Logger.cpp
